# pythonYoutDownloader

./: .gitignore  CHANGELOG.md  CHANGELOG_CHUNKS.md  EXAMPLES_v3.0.0.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  RELEASE_NOTES_v3.0.0.md  __init__.py  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: ENVIRONMENT_SETUP.md  ENVIRONMENT_SETUP_EN.md  PACKAGE_MANAGEMENT.md  PACKAGE_MANAGEMENT_EN.md
examples/: segmented_video_example.py
src/: __init__.py  universal_video_downloader.py  youtube_downloader.py
tests/: __init__.py  demo.py  test_downloader.py  test_problematic_videos.py  test_segmented_video.py
